Fixed incorrect volume after new track plays. Also fixed volume now having correct visibility immediately after settings changed. Also volume now gets set to max value if control is invisible.