@@ -1,5 +1,6 @@
 package com.jacstuff.musicplayer.view.fragments.volume;
 
+import android.annotation.SuppressLint;
 import android.content.Context;
 import android.graphics.Canvas;
 import android.graphics.Paint;
@@ -26,13 +27,9 @@ public class CustomVolumeView extends View {
     private final RectF bgRect = new RectF();
     private final RectF progressRect = new RectF();
 
-    // Colors – change these to match your theme
-    private int backgroundColor = 0xFF333333;
-    private int progressColor   = 0xFF4CAF50;   // the “different color”
-    private int thumbColor      = 0xFFFFFFFF;
+    private int progressColor   = 0xFF4CAF50;
 
-    private float cornerRadius = 12f;   // rounded corners
-    private float thumbHeight  = 8f;    // thin horizontal line
+    private final float cornerRadius = 12f;
 
     public CustomVolumeView(Context context) {
         super(context);
@@ -51,6 +48,7 @@ public class CustomVolumeView extends View {
 
     private void init() {
         backgroundPaint = new Paint(Paint.ANTI_ALIAS_FLAG);
+        int backgroundColor = 0xFF333333;
         backgroundPaint.setColor(backgroundColor);
         backgroundPaint.setStyle(Paint.Style.FILL);
 
@@ -59,88 +57,80 @@ public class CustomVolumeView extends View {
         progressPaint.setStyle(Paint.Style.FILL);
 
         thumbPaint = new Paint(Paint.ANTI_ALIAS_FLAG);
+        int thumbColor = 0xFFFFFFFF;
         thumbPaint.setColor(thumbColor);
         thumbPaint.setStyle(Paint.Style.FILL);
     }
 
-    // ---------- Public API ----------
 
     public void setOnVolumeChangeListener(OnVolumeChangeListener listener) {
         this.listener = listener;
     }
 
-    /** Set volume programmatically (0 – 100) */
+
     public void setVolume(int percentage) {
-        progress = Math.max(0f, Math.min(1f, percentage / 100f));
+        progress = Math.clamp(percentage / 100f, 0f, 1f);
         invalidate();
     }
 
-    public int getVolume() {
-        return Math.round(progress * 100);
-    }
 
-    public void setColors(int background, int progress, int thumb) {
-        backgroundColor = background;
-        progressColor = progress;
-        thumbColor = thumb;
-        backgroundPaint.setColor(backgroundColor);
+    public void setProgressColor(int progress){
+        this.progressColor = progress;
         progressPaint.setColor(progressColor);
-        thumbPaint.setColor(thumbColor);
         invalidate();
     }
 
-    // ---------- Drawing ----------
 
     @Override
-    protected void onDraw(Canvas canvas) {
+    protected void onDraw(@androidx.annotation.NonNull Canvas canvas) {
         super.onDraw(canvas);
+        drawBackground(canvas);
+        drawProgress(canvas);
+        drawThumbLine(canvas);
+    }
 
-        int width  = getWidth();
-        int height = getHeight();
+    private void drawBackground(Canvas canvas){
+        bgRect.set(getPaddingLeft(), getPaddingTop(), getWidth() - getPaddingRight(), getHeight() - getPaddingBottom());
+        canvas.drawRoundRect(bgRect, cornerRadius, cornerRadius, backgroundPaint);
+
+    }
+
+
+    private void drawProgress(Canvas canvas){
         float padL = getPaddingLeft();
         float padT = getPaddingTop();
         float padR = getPaddingRight();
         float padB = getPaddingBottom();
 
-        // Background (full height)
-        bgRect.set(padL, padT, width - padR, height - padB);
-        canvas.drawRoundRect(bgRect, cornerRadius, cornerRadius, backgroundPaint);
-
-        // Progress – everything BELOW the current progress point
-        // progress = 1.0 → full height filled, progress = 0.0 → nothing filled
-        float filledHeight = (height - padT - padB) * progress;
-        float topOfProgress = height - padB - filledHeight;
-
-        progressRect.set(padL, topOfProgress, width - padR, height - padB);
+        float filledHeight = (getHeight() - padT - padB) * progress;
+        float topOfProgress = getHeight() - padB - filledHeight;
+        progressRect.set(padL, topOfProgress, getWidth() - padR, getHeight() - padB);
         canvas.drawRoundRect(progressRect, cornerRadius, cornerRadius, progressPaint);
+    }
 
-        // Optional thin thumb line at the top of the filled area
+    private void drawThumbLine(Canvas canvas){
+        float filledHeight = (getHeight() - getPaddingTop() - getPaddingBottom()) * progress;
+        float topOfProgress = getHeight() - getPaddingBottom() - filledHeight;
+        float thumbHeight = 8f;
         float thumbTop = topOfProgress - thumbHeight / 2f;
         canvas.drawRoundRect(
-                padL, thumbTop,
-                width - padR, thumbTop + thumbHeight,
+                getPaddingLeft(), thumbTop,
+                getWidth() - getPaddingRight(), thumbTop + thumbHeight,
                 cornerRadius, cornerRadius, thumbPaint);
     }
 
     // ---------- Touch handling ----------
 
+    @SuppressLint("ClickableViewAccessibility")
     @Override
     public boolean onTouchEvent(MotionEvent event) {
-        if (!isEnabled()) return false;
+        if (!isEnabled()) {
+            return false;
+        }
+        float newProgress = convertToProgress(event.getY());
 
-        float y = event.getY();
-        int height = getHeight();
-        float padT = getPaddingTop();
-        float padB = getPaddingBottom();
-        float usableHeight = height - padT - padB;
-
-        // Convert touch Y → progress (0 at bottom, 1 at top)
-        float newProgress = 1f - (y - padT) / usableHeight;
-        newProgress = Math.max(0f, Math.min(1f, newProgress));
-
-        switch (event.getAction()) {
-            case MotionEvent.ACTION_DOWN:
-            case MotionEvent.ACTION_MOVE:
+        return switch (event.getAction()) {
+            case MotionEvent.ACTION_DOWN, MotionEvent.ACTION_MOVE -> {
                 if (Math.abs(newProgress - progress) > 0.001f) {
                     progress = newProgress;
                     invalidate();
@@ -148,20 +138,23 @@ public class CustomVolumeView extends View {
                         listener.onVolumeChanged(Math.round(progress * 100));
                     }
                 }
-                return true;
-
-            case MotionEvent.ACTION_UP:
-            case MotionEvent.ACTION_CANCEL:
-                // final value already sent on MOVE
-                return true;
-        }
-        return super.onTouchEvent(event);
+                yield true;
+            }
+            case MotionEvent.ACTION_UP, MotionEvent.ACTION_CANCEL -> true;
+            default -> super.onTouchEvent(event);
+        };
     }
 
-    // Make the view a bit wider than tall if needed (optional)
+
+    private float convertToProgress(float y){
+        float usableHeight = getHeight() - getPaddingTop() - getPaddingBottom();
+        float newProgress = 1f - (y - getPaddingTop()) / usableHeight;
+        return Math.clamp(newProgress, 0f, 1f);
+    }
+
+
     @Override
     protected void onMeasure(int widthMeasureSpec, int heightMeasureSpec) {
-        // Prefer a reasonable default size if wrap_content is used
         int desiredWidth  = (int) (48 * getResources().getDisplayMetrics().density);
         int desiredHeight = (int) (200 * getResources().getDisplayMetrics().density);
 
